--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,11 @@
       {% endif %}
     </head>
     <body>
-        <div>ProjectManagementApp: <a href="/login">Login</a></div>
+        <div>ProjectManagementApp: 
+            <a href="/home">Home</a>
+            <a href="/login">Login</a>
+            <a href="/logout">Logout</a>
+        </div>
         <hr>
         {% with messages = get_flashed_messages() %}
         {% if messages %}
