--- a/app/templates/home_template.html
+++ b/app/templates/home_template.html
@@ -3,7 +3,7 @@
 {% block app_content %}
     <h1>Create New Issue</h1>
     <div class="row">
-        <div class=col-md-4">
+        <div class="col-md-4">
             {{ wtf.quick_form(create_issue) }}
         </div>
     </div>
