--- a/app/templates/login_template.html
+++ b/app/templates/login_template.html
@@ -8,4 +8,15 @@
         </div>
     </div>
     <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
+    <br>
+    <p>
+        This is a Python Flask application created by James D. Wood, an undergraduate student at the Georgia Institute of Technology.
+        In order to demo this application, please use the following login details to try various user types:
+
+        Admin: admin@test.com
+        Developer: developer@test.com
+        Client: client@test.com
+
+        The password for all of the above is 123abc.
+    </p>
 {% endblock %}
