--- a/app/templates/login_template.html
+++ b/app/templates/login_template.html
@@ -10,13 +10,13 @@
     <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
     <br>
     <p>
-        This is a Python Flask application created by James D. Wood, an undergraduate student at the Georgia Institute of Technology.
-        In order to demo this application, please use the following login details to try various user types:
+        This is a Python Flask application created by James D. Wood, an undergraduate student at the Georgia Institute of Technology.<br>
+        In order to demo this application, please use the following login details to try various user types:<br><br>
 
-        Admin: admin@test.com
-        Developer: developer@test.com
-        Client: client@test.com
+        Admin: admin@test.com<br>
+        Developer: developer@test.com<br>
+        Client: client@test.com<br><br>
 
-        The password for all of the above is 123abc.
+        The password for all of the above is 123abc.<br>
     </p>
 {% endblock %}
